hphp/hack/test/typecheck/this_anon_bad.php.exp
File "this_anon_bad.php", line 34, characters 11-19:
Invalid argument (Typing[4110])
File "this_anon_bad.php", line 21, characters 13-17:
This is the expression dependent type this
File "this_anon_bad.php", line 34, characters 15-17:
It is incompatible with an object of exactly the class Foo
File "this_anon_bad.php", line 13, characters 7-9:
Since Foo is not final
File "this_anon_bad.php", line 34, characters 15-17:
this might not be a Foo
